--- a/src/App.css
+++ b/src/App.css
@@ -40,22 +40,22 @@ a{
 
 .gral{
   display: flex;
-  height: 30vh;
+  height: 23vh;
   width: 100vw;
   flex-direction: row;
   justify-content: space-around;
+  margin: 0;
   flex-wrap: nowrap;
   background-color: #0d1a27;
 }
 
 .Red-cont{
   display: flex;
-  height: 10vh;
   width: 60vw;
-  flex-wrap: nowrap;
   flex-direction: row;
-  justify-content: space-between;
-  margin: 40px;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  margin: 40 0 px;
 }
 
 .ant-layout-footer {
@@ -65,10 +65,11 @@ a{
 /*Home*/
 .ant-carousel .slick-slide {
   text-align: center;
-  height: 160px;
+  height: 60vh;
   width: 100vw;
   line-height: 160px;
   background: #364d79;
+  background-image: cover;
   overflow: hidden;
 }
 
@@ -83,9 +84,10 @@ a{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 600px;
     margin:10px;
-    background-image: cover;
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover;
     opacity: .5;
     }
 
@@ -130,7 +132,7 @@ a{
   background-size: cover;
   opacity: 0.6; 
   display: flex;
-  height: 530px;
+  height: 68vh;
   flex-wrap: wrap;
   justify-content: center;
   flex-direction: column;
@@ -147,7 +149,7 @@ a{
   background-size: cover;
   opacity: 0.6; 
   display: flex;
-  height: 530px;
+  height: 68vh;
   flex-wrap: wrap;
   justify-content: center;
   flex-direction: column;
@@ -156,20 +158,39 @@ a{
 
 .back-sign{
   background-color: rgba(27, 27, 27, 0.76);
-  padding: 50px;
+  padding: 5px;
 }
 
 
 /*////////Perfil/////////*/
 
 .profile{
+  background-image: url('https://images.unsplash.com/photo-1505243542579-da5adfe8338f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80');
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: .85;
+  padding: 50px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
-  height: 510px;
-  width: 50%;
+  height: 68vh;
+  width: 100%;
+}
+.complemento-prof{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  height: 50vh;
+  width: 30vw;
+}
 
+.cards-news{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 300px;
 }
 
 
@@ -177,11 +198,24 @@ a{
 
 .newEventform{
   display: flex;
-  height: 300px;
-
-  background-color: rgb(rgb(168, 168, 168));
-  flex-wrap: wrap;
-  justify-content: center;
+  height: 68vh;
+  background-image: url('https://www.biplaza.es/wp-content/uploads/2018/06/tortuga.jpg');
+  background-size: cover;
+  background-position: center;
+  opacity: .95; 
+  flex-wrap: nowrap;
+  justify-content: space-between;
   flex-direction: column;
   align-items: center;
 }
+
+
+/*Events listt*/
+.event-card{
+  display: flex;
+  height: 63vh;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: space-between;
+  }
